# sql-1

./: .gitignore  .last-ralph-branch  build.gradle  claude.md  multisearch-demo.ppl  multisearch-workflow-progress.md  prd.json  progress-sqlnode-converter.txt  progress.txt  ralph-loop.sh  ralph-prompt.md  ralph.sh  settings.gradle
.clinerules/: coding-best-practice.md  ppl-development.md
.kiro/: README.md
analytics-engine-stub/: build.gradle
analytics-engine-test/: .agent-prompt.md  README.md  REPORT.md  generate-report.py  publish-sql-plugin.sh  run-sql-compat-test.sh  start-cluster.sh
api/: README.md  build.gradle
arion/: docker-compose.yml
cli/: build.gradle
common/: build.gradle
core/: build.gradle
docs/: Gemfile  analytics-sql-it-runbook.md  category.json  clickbench-analytics-engine-report.md  clickbench-analytics-engine-testing-steps.md  clickbench-tpch-analytics-engine-testing-steps.md  mustang-ansi-v2-incompatibilities.md  mustang-followup-ansi-sql-it.md  mustang-followup.md  mustang-reduce-sql-api-failures.md  sop-sql-compatibility-test.md  sql-compatibility.md
flint/: build.sbt
integ-test/: build.gradle
legacy/: build.gradle
memory-bank/: federated-search-design.md
mustang-scripts/: README.md  (+12 more)
unified-functions-datafusion/: Cargo.toml
unified-functions-datafusion/src/: aggregation.rs  binning.rs  collection.rs  condition.rs  crypto.rs  datetime.rs  ip.rs  json.rs  lib.rs  math.rs  parse.rs  relevance.rs  rex.rs  schema_loader.rs  test_harness.rs  type_conv.rs
unified-functions-datafusion/tests/: ppl_e2e_tests.rs  spec_tests.rs
(+745 files in other folders)
