[package]
name = "unified-functions-datafusion"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "45"
arrow = "54"
serde_yaml = "0.9"
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.10"
ipnetwork = "0.20"
regex = "1"
md-5 = "0.10"
crc32fast = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }